welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def faireV(c: Color){
  setCouleurBrosse(c);
  avance();
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  droite();
  droite();
 	avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
}

def unSymbole(c: Color){
  faireV(Color.YELLOW);
  faireV(Color.RED);
  faireV(Color.BLUE);
  faireV(Color.GREEN);
  avance(5);
}

override def run() {
	for(i<-1 to 3){
  	for(j<-1 to 3){
      unSymbole(c);
    }
    gauche();
    avance(5);
    droite();
  }
}